# Silent-face-anti-spoofing

./: convert_to_onnx.py  test.py  test_onnx.py  test_trt.py
confirm/: Fourier.py
deepstream/: CMakeLists.txt
deepstream/common/: onnx_plan_verify.py  setup.py
deepstream/common/cpp/: CMakeLists.txt  export.cpp  infer.cpp
deepstream/common/csrc/: engine.cpp  extensions.cpp
deepstream/common/includes/: detect_meta.h  utils.h
deepstream/common/nvdsincludes/: nvds_msgapi.h  nvdsmeta_schema.h
deepstream/common/src/: detect_meta.cpp  utils.cpp
deepstream/gst-antispoof/: gstantispoof.cpp  gstantispoof.h
deepstream/test/: box_by_scale.cpp  vetor_add.cpp
deepstream/test/test_real_perf/: test_real_perf.py
src/: anti_spoof_predict.py  generate_patches.py
